fix overflow in Datenschutz

--- a/pudevelopment.tech/css/stylesheet.css
+++ b/pudevelopment.tech/css/stylesheet.css
@@ -7,6 +7,7 @@ body {
     user-select: none;
     margin: 0;
     padding: 0;
+    overflow: hidden;
     background-color: white;
 }
 
